# ros_driver_integration

devel/: .catkin  setup.sh
devel/include/robotcraft2024_driver_g2/: set_rgb.h  set_rgbRequest.h  set_rgbResponse.h
devel/lib/pkgconfig/: robotcraft2024_driver_g2.pc  robotcraft_robot_description.pc
devel/lib/python3/dist-packages/robotcraft2024_driver_g2/srv/: __init__.py  _set_rgb.py
devel/lib/robotcraft2024_driver_g2/: square_test
devel/share/robotcraft2024_driver_g2/cmake/: robotcraft2024_driver_g2-msg-paths.cmake  robotcraft2024_driver_g2Config.cmake
devel/share/robotcraft_robot_description/cmake/: robotcraft_robot_descriptionConfig.cmake
devel/share/roseus/ros/robotcraft2024_driver_g2/: manifest.l
src/robotcraft2024_driver_g2/: CMakeLists.txt  package.xml
src/robotcraft2024_driver_g2/launch/: display_robotcraft.launch  robot_bringup.launch  robot_driver.launch  robot_firmware.launch
src/robotcraft2024_driver_g2/ros_lib/robotcraft2024_driver_g2/: set_rgb.h
src/robotcraft2024_driver_g2/src/: robot_driver.py  square_test.cpp
src/robotcraft_robot_description/robotcraft_robot_description/: CMakeLists.txt  README.md  package.xml
src/robotcraft_robot_description/robotcraft_robot_description/launch/: display_robotcraft.launch
src/robotcraft_robot_description/robotcraft_robot_description/mesh/: Black.stl  Green.stl  Purple.stl  Red.stl  Transparent.stl  White.stl
src/robotcraft_robot_description/robotcraft_robot_description/rviz/: robotcraft_robot.rviz
src/robotcraft_robot_description/robotcraft_robot_description/urdf/: robotcraft.urdf
(+7 files in other folders)
