<?xml version="1.0"?>
<package>
  <name>robotcraft_robot_description</name>
  <version>0.0.0</version>
  <description>robotcraft_robot_description provides a complete 3D model of the Robot of RobotCraft for simulation and visualization</description>
  <maintainer email="welcome@ingeniarius.pt">Andre Araujo</maintainer>  
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>  
  <run_depend>urdf</run_depend>  
</package>



 
